# robo-vision-stitch

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  README.md  cmake_install.cmake  ref.cpp  stitch  stitch.cpp
iris-tests/: field_trees.avi
